# Copyright © 2023- Gimlet Labs, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of Gimlet Labs, Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Gimlet Labs, Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# Gimlet Labs, Inc.
#
# SPDX-License-Identifier: Proprietary

load("//bazel:gml_build_system.bzl", "gml_cc_library")
load("//src/gem/plugins:plugins.bzl", "select_plugins")

package(default_visibility = [
    "//src:__subpackages__",
])

gml_cc_library(
    name = "cc_library",
    srcs = [
        "cached_blob_store.cc",
        "controller.cc",
        "device_info.cc",
        "device_serial.cc",
        "file_downloader.cc",
        "gem_metrics.cc",
        "grpc_bridge.cc",
        "heartbeat.cc",
        "lifecycle.cc",
        "metrics_handler.cc",
        "model_exec_handler.cc",
        "system_metrics.cc",
        "video_stream_handler.cc",
    ],
    hdrs = [
        "cached_blob_store.h",
        "controller.h",
        "device_info.h",
        "device_serial.h",
        "file_downloader.h",
        "gem_info.h",
        "gem_metrics.h",
        "grpc_bridge.h",
        "heartbeat.h",
        "lifecycle.h",
        "message_handler.h",
        "metrics_handler.h",
        "model_exec_handler.h",
        "system_metrics.h",
        "video_stream_handler.h",
    ],
    deps = [
        "//src/api/corepb/v1:corepb_cc_library",
        "//src/common/event:cc_library",
        "//src/common/grpcutils:cc_library",
        "//src/common/metrics:cc_library",
        "//src/common/signal:cc_library",
        "//src/common/system:cc_library",
        "//src/common/uuid:cc_library",
        "//src/controlplane/egw/egwpb/v1:egwpb_cc_library",
        "//src/controlplane/egw/egwpb/v1:egwpb_grpc_cc_library",
        "//src/controlplane/filetransfer/ftpb/v1:ftpb_cc_library",
        "//src/controlplane/fleetmgr/fmpb/v1:fmpb_cc_library",
        "//src/controlplane/fleetmgr/fmpb/v1:fmpb_grpc_cc_library",
        "//src/gem/calculators/core:cc_library",
        "//src/gem/exec/core/runner:cc_library",
        "//src/gem/plugins:cc_library",
        "//src/gem/storage:cc_library",
        "@com_github_google_mediapipe//mediapipe/calculators/core:flow_limiter_calculator",
        "@com_github_google_mediapipe//mediapipe/calculators/util:annotation_overlay_calculator",
        "@com_github_google_mediapipe//mediapipe/calculators/util:detections_to_render_data_calculator",
        "@com_github_google_mediapipe//mediapipe/calculators/util:packet_latency_calculator",
        "@com_github_google_mediapipe//mediapipe/framework:calculator_framework",
        "@com_github_okdshin_picosha//:picosha",
        "@com_github_oneapi_oneTBB//:tbb",
        "@com_github_rlyeh_sole//:sole",
    ] + select_plugins(),
)
