# Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel:gml_build_system.bzl", "gml_cc_library", "gml_cc_test")
load("//src/gem/plugins:plugins.bzl", "plugin_settings")

package(default_visibility = [
    "//src:__subpackages__",
    "//src/experimental:__subpackages__",
])

plugin_settings()

gml_cc_library(
    name = "cc_library",
    srcs = [
        "registry.cc",
    ],
    hdrs = [
        "registry.h",
    ],
    deps = [
        "//src/api/corepb/v1:corepb_cc_library",
        "//src/common/event:cc_library",
        "//src/common/metrics:cc_library",
        "//src/gem/build/core:cc_library",
        "//src/gem/capabilities/core:cc_library",
        "//src/gem/exec/core:cc_library",
        "//src/gem/metrics/core:cc_library",
        "//src/gem/storage:cc_library",
    ],
)

gml_cc_test(
    name = "registry_test",
    srcs = ["registry_test.cc"],
    deps = [
        ":cc_library",
    ],
)
