# Copyright © 2023- Gimlet Labs, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of Gimlet Labs, Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Gimlet Labs, Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# Gimlet Labs, Inc.
#
# SPDX-License-Identifier: Proprietary

load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
load("@build_stack_rules_proto//rules/go:proto_go_library.bzl", "proto_go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "specpb_proto",
    srcs = [
        "execution.proto",
        "model.proto",
        "tensorrt_model.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//third_party/github.com/google/mediapipe/mediapipe/framework:framework_proto"],
)

proto_cc_library(
    name = "specpb_cc_library",
    srcs = [
        "execution.pb.cc",
        "model.pb.cc",
        "tensorrt_model.pb.cc",
    ],
    hdrs = [
        "execution.pb.h",
        "model.pb.h",
        "tensorrt_model.pb.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/github.com/google/mediapipe/mediapipe/framework:framework_cc_library",
        "@com_google_protobuf//:protobuf",
    ],
)

proto_compile(
    name = "specpb_cpp_compile",
    outputs = [
        "execution.pb.cc",
        "execution.pb.h",
        "model.pb.cc",
        "model.pb.h",
        "tensorrt_model.pb.cc",
        "tensorrt_model.pb.h",
    ],
    plugins = ["@build_stack_rules_proto//plugin/builtin:cpp"],
    proto = "specpb_proto",
    visibility = ["//visibility:public"],
)

proto_compile(
    name = "specpb_go_compile",
    output_mappings = [
        "execution.pb.go=gimletlabs.ai/gimlet/src/gem/specpb/execution.pb.go",
        "model.pb.go=gimletlabs.ai/gimlet/src/gem/specpb/model.pb.go",
        "tensorrt_model.pb.go=gimletlabs.ai/gimlet/src/gem/specpb/tensorrt_model.pb.go",
    ],
    outputs = [
        "execution.pb.go",
        "model.pb.go",
        "tensorrt_model.pb.go",
    ],
    plugins = ["@build_stack_rules_proto//plugin/gogo/protobuf:protoc-gen-gogoslick"],
    proto = "specpb_proto",
    visibility = ["//visibility:public"],
)

proto_go_library(
    name = "specpb_go_proto",
    srcs = [
        "execution.pb.go",
        "model.pb.go",
        "tensorrt_model.pb.go",
    ],
    importpath = "gimletlabs.ai/gimlet/src/gem/specpb",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/github.com/google/mediapipe/mediapipe/framework:framework_go_proto",
        "@com_github_gogo_protobuf//proto",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor",
        "@com_github_gogo_protobuf//sortkeys",
        "@com_github_gogo_protobuf//types",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
