# Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel:gml_build_system.bzl", "gml_cc_library")

package(default_visibility = [
    "//src/gem:__subpackages__",
])

gml_cc_library(
    name = "cc_library",
    srcs = [
        "ensure_protos_linked.cc",
    ],
    data = [
        "default_argus_graph.pbtxt",
        "default_opencv_graph.pbtxt",
    ],
    deps = [
        "@com_github_google_mediapipe//mediapipe/calculators/image:image_transformation_calculator",
        "@com_github_google_mediapipe//mediapipe/calculators/image:scale_image_calculator",
        "@com_github_google_mediapipe//mediapipe/calculators/image:scale_image_calculator_cc_proto",
    ],
)
