# Copyright © 2023- Gimlet Labs, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of Gimlet Labs, Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Gimlet Labs, Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# Gimlet Labs, Inc.
#
# SPDX-License-Identifier: Proprietary

load("//bazel:gml_build_system.bzl", "gml_cc_library", "gml_cc_test")

package(default_visibility = [
    "//src/experimental:__subpackages__",
    "//src/gem:__subpackages__",
])

gml_cc_library(
    name = "cc_library",
    srcs = [
        "blob_store.h",
        "fs_blob_store.cc",
        "fs_blob_store.h",
        "memory_blob.h",
    ],
    deps = [
        "//src/common/fs:cc_library",
        "//src/common/system:cc_library",
    ],
)

gml_cc_test(
    name = "fs_blob_store_test",
    srcs = ["fs_blob_store_test.cc"],
    deps = [":cc_library"],
)
