# Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel:gml_build_system.bzl", "gml_cc_library", "gml_cc_test")

package(default_visibility = [
    "//src/experimental:__subpackages__",
    "//src/gem:__subpackages__",
])

gml_cc_library(
    name = "cc_library",
    srcs = [
        "blob_store.h",
        "fs_blob_store.cc",
        "fs_blob_store.h",
    ],
    deps = [
        "//src/common/fs:cc_library",
        "//src/common/system:cc_library",
    ],
)

gml_cc_test(
    name = "fs_blob_store_test",
    srcs = ["fs_blob_store_test.cc"],
    deps = [":cc_library"],
)
