# Copyright © 2023- Gimlet Labs, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of Gimlet Labs, Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Gimlet Labs, Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# Gimlet Labs, Inc.
#
# SPDX-License-Identifier: Proprietary

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_tarball")

go_library(
    name = "dockertestutils",
    srcs = ["utils.go"],
    data = [
        ":postgres_15_alpine",
        ":victoria_metrics_v1_93_6",
    ],
    importpath = "gimletlabs.ai/gimlet/src/testutils/dockertestutils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ory_dockertest_v3//:dockertest",
        "@com_github_ory_dockertest_v3//docker",
        "@com_github_sirupsen_logrus//:logrus",
        "@io_bazel_rules_go//go/runfiles:go_default_library",
    ],
)

oci_tarball(
    name = "postgres_15_alpine",
    image = "@postgres_15_alpine",
    repo_tags = ["postgres:15-alpine"],
)

oci_tarball(
    name = "victoria_metrics_v1_93_6",
    image = "@victoria_metrics_1_93_6",
    repo_tags = ["victoriametrics/victoria-metrics:v1.93.6"],
)
