# Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_tarball")

go_library(
    name = "dockertestutils",
    srcs = ["utils.go"],
    data = [
        ":pgvector_pg15",
        ":victoria_metrics_v1_93_6",
    ],
    importpath = "gimletlabs.ai/gimlet/src/testutils/dockertestutils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ory_dockertest_v3//:dockertest",
        "@com_github_ory_dockertest_v3//docker",
        "@com_github_sirupsen_logrus//:logrus",
        "@io_bazel_rules_go//go/runfiles:go_default_library",
    ],
)

oci_tarball(
    name = "victoria_metrics_v1_93_6",
    image = "@victoria_metrics_1_93_6",
    repo_tags = ["victoriametrics/victoria-metrics:v1.93.6"],
)

oci_tarball(
    name = "pgvector_pg15",
    image = "@pgvector_pg15",
    repo_tags = ["pgvector/pgvector:pg15"],
)
